tests/suite/similar-names/fail/simfail01.hs
data Person = Person { name :: String }

nAme :: Int
nAme = 1

main = do
  print nAme
  print (name Person { name = "Hello" })
