tests/suite/similar-names/fail/simfail01.stderr

tests/suite/similar-names/fail/simfail01.hs:4:1: error:
    Multiple declarations with names differing only in case.
    Declared at: tests/suite/similar-names/fail/simfail01.hs:1:24
                 tests/suite/similar-names/fail/simfail01.hs:4:1
